# dmusic

./: README.md  license.txt
android/app/: CMakeLists.txt.disabled  build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: BassAudioEngine.cpp  BassAudioEngine.h  CMakeLists.txt  audio_buffer_manager.cpp  bass_audio_bridge.cpp  bass_audio_engine_test.cpp  bass_network_manager.cpp  native_audio_bridge.cpp
android/app/src/main/java/com/dab/android/music_streaming_app/: AndroidAudioManager.java  BassAudioEngine.java  BassAudioEngineTest.java  BytedecoFFmpegStreamingEngine.java  HttpsStreamingTestActivity.java
android/app/src/main/kotlin/com/dab/android/music_streaming_app/: AutoMediaBrowserService.kt  BassAudioManager.kt  BassMainActivity.kt  BluetoothAudioReceiver.kt  CloudflareUserAgent.kt  MainActivity.kt  MusicNotificationManager.kt  MusicNotificationReceiver.kt  MusicPlaybackService.kt  OptimizedBassAudioManager.kt  PlaybackChannelBridge.kt
android/app/src/main/res/drawable/: ic_music_note.xml  ic_pause.xml  ic_skip_next.xml  ic_skip_previous.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: automotive_app_desc.xml  file_paths.xml  network_security_config.xml
bass24/: bass.chm  bass.txt
bass24-android/java/com/un4seen/bass/: BASS.java
bass_fx24-android/examples/: settings.gradle
bass_fx24-android/examples/bpm/src/main/: AndroidManifest.xml
bass_fx24-android/examples/bpm/src/main/java/com/example/bpm/: BPM.java
bass_fx24-android/examples/bpm/src/main/res/layout/: main.xml
bass_fx24-android/examples/bpm/src/main/res/values/: strings.xml
bass_fx24-android/examples/reverse/src/main/: AndroidManifest.xml
bass_fx24-android/examples/reverse/src/main/java/com/example/reverse/: Reverse.java
bass_fx24-android/examples/reverse/src/main/res/layout/: main.xml
bass_fx24-android/examples/reverse/src/main/res/values/: strings.xml
bass_fx24/Delphi/BPM/: bpm.pas
bass_fx24/Delphi/DSP/: dsp.pas
bass_fx24/Delphi/Reverse/: reverse.pas
bass_fx24/Delphi/Tempo/: tempo.pas
bass_ssl-android/: version.txt
bass_ssl-android/c/: bass_ssl.h
bassflac24/: bassflac.chm
bassflac24-android/java/com/un4seen/bass/: BASSFLAC.java
bassflac24/delphi/: bassflac.pas
bassflac24/vb/: bassflac.bas
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
